buildscript {
    repositories {
        mavenCentral()
        maven {
            name = "forge"
            url = "http://files.minecraftforge.net/maven"
        }
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
        }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
    }
}

apply plugin: 'forge'
apply plugin: 'java'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

version = "1.0"
group = "com.craftingguide.exporter"
archivesBaseName = "crafting-guide-exporter"

minecraft {
    version = "1.7.10-10.13.4.1614-1.7.10"
    runDir = "minecraft"
}

repositories {
  maven { url = "http://chickenbones.net/maven/"}
  maven {
    name = "CurseForge"
    url = "https://minecraft.curseforge.com/api/maven/"
  }
  maven { url 'https://jitpack.io' }
}

dependencies {
  compile group: 'org.json', name: 'json', version: '20090211'
  compile "agricraft:AgriCraft-1.7.10:1.5.0:dev"
  compile "com.github.Buildcraft:buildcraft:68514dedb0:dev"
  compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
  compile files("libs/CoFHCore-[1.7.10]3.1.4-329-dev.jar")
  compile "codechicken:EnderStorage:1.7.10-1.4.7.38:dev"
  compile files("libs/RedstoneArsenal-[1.7.10]1.1.2-92-dev.jar")
  compile files("libs/ThermalDynamics-[1.7.10]1.2.1-172-dev.jar")
  compile files("libs/ThermalExpansion-[1.7.10]4.1.5-248-dev.jar")
  compile files("libs/ThermalFoundation-[1.7.10]1.2.6-118-dev.jar")
  compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
  compile files("libs/CodeChickenLib-1.7.10-1.1.3.140-dev.jar")
  testCompile 'junit:junit:4.12'
}

processResources {
    // this will ensure that this task is redone when the versions change.
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    // replace stuff in mcmod.info, nothing else
    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'

        // replace version and mcversion
        expand 'version':project.version, 'mcversion':project.minecraft.version
    }

    // copy everything else, thats not the mcmod.info
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
